force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_rateudb_1__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_rateudb_1__c</fullName>
    <label>1. rateudbetaling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_33</fullName>
                <label>33 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_34</fullName>
                <label>34 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_35</fullName>
                <label>35 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_36</fullName>
                <label>36 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_37</fullName>
                <label>37 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_38</fullName>
                <label>38 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_39</fullName>
                <label>39 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_40</fullName>
                <label>40 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_26</fullName>
                <label>26 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_27</fullName>
                <label>27 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_28</fullName>
                <label>28 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_29</fullName>
                <label>29 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_18</fullName>
                <label>18 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_19</fullName>
                <label>19 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_20</fullName>
                <label>20 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_21</fullName>
                <label>21 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_22</fullName>
                <label>22 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_23</fullName>
                <label>23 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_24</fullName>
                <label>24 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_25</fullName>
                <label>25 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_30</fullName>
                <label>30 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_31</fullName>
                <label>31 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_1_32</fullName>
                <label>32 år</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>