force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_rateudb_1_procent__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_rateudb_1_procent__c</fullName>
    <label>Procent udbetalt ved 1. rateudbe 84575</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>