force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_rateudb_2__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_rateudb_2__c</fullName>
    <label>2. rateudbetaling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_34</fullName>
                <label>34 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_35</fullName>
                <label>35 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_36</fullName>
                <label>36 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_37</fullName>
                <label>37 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_38</fullName>
                <label>38 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_39</fullName>
                <label>39 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_26</fullName>
                <label>26 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_27</fullName>
                <label>27 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_28</fullName>
                <label>28 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_29</fullName>
                <label>29 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_30</fullName>
                <label>30 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_40</fullName>
                <label>40 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_19</fullName>
                <label>19 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_20</fullName>
                <label>20 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_21</fullName>
                <label>21 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_22</fullName>
                <label>22 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_23</fullName>
                <label>23 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_24</fullName>
                <label>24 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_25</fullName>
                <label>25 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_31</fullName>
                <label>31 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_32</fullName>
                <label>32 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_2_33</fullName>
                <label>33 år</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>