force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_rateudb_3__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_rateudb_3__c</fullName>
    <label>3. rateudbetaling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_37</fullName>
                <label>37 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_38</fullName>
                <label>38 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_39</fullName>
                <label>39 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_40</fullName>
                <label>40 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_26</fullName>
                <label>26 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_27</fullName>
                <label>27 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_28</fullName>
                <label>28 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_29</fullName>
                <label>29 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_30</fullName>
                <label>30 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_31</fullName>
                <label>31 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_32</fullName>
                <label>32 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_33</fullName>
                <label>33 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_20</fullName>
                <label>20 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_21</fullName>
                <label>21 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_22</fullName>
                <label>22 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_23</fullName>
                <label>23 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_24</fullName>
                <label>24 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_25</fullName>
                <label>25 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_ingen_tilb</fullName>
                <label>Ingen resterende arv, efter 1. og 2. rateudbetaling</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_34</fullName>
                <label>34 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_35</fullName>
                <label>35 år</label>
            </value>
            <value>
                <fullName>bndlggelse_rateudb_3_36</fullName>
                <label>36 år</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>