force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_rateudb_3_procent_res_415__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_rateudb_3_procent_res_415__c</fullName>
    <label>Procent udbetalt ved 3. rateudbe d8dce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>