force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_su_tillg__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_su_tillg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SU-tillæg</label>
    <type>Checkbox</type>
</CustomField>