force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_uddannelsesforml__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_uddannelsesforml__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uddannelsesformål (Legacy)</label>
    <type>Checkbox</type>
</CustomField>