force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_uddforml__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_uddforml__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uddannelsesformål</label>
    <type>Checkbox</type>
</CustomField>