force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_udg_forb_fast_ejnd__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_udg_forb_fast_ejnd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Udgifter i forbindelse med køb a 0515e</label>
    <type>Checkbox</type>
</CustomField>