force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_udg_forb_fastejnd__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_udg_forb_fastejnd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Udgifter i forbindelse med køb a 1f984</label>
    <type>Checkbox</type>
</CustomField>