force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_vlg_antal_rater__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_vlg_antal_rater__c</fullName>
    <label>Vælg antal rater</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>bndlggelse_antal_rater_2</fullName>
                <label>To rater</label>
            </value>
            <value>
                <fullName>bndlggelse_antal_rater_3</fullName>
                <label>Tre rater</label>
            </value>
            <value>
                <fullName>bndlggelse_antal_rater_4</fullName>
                <label>Fire rater</label>
            </value>
            <value>
                <fullName>bndlggelse_antal_rater_5</fullName>
                <label>Fem rater</label>
            </value>
            <value>
                <fullName>bndlggelse_antal_rater_6</fullName>
                <label>Seks rater</label>
            </value>
            <value>
                <fullName>bndlggelse_antal_rater_7</fullName>
                <label>Syv rater</label>
            </value>
            <value>
                <fullName>bndlggelse_antal_rater_8</fullName>
                <label>Otte rater</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>