force-app/main/default/objects/df_journal_dk_new__c/fields/brnetestamente_boolean__c.field-meta.xml
<CustomField>
    <fullName>brnetestamente_boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Børnetestamente</label>
    <type>Checkbox</type>
</CustomField>