force-app/main/default/objects/df_journal_dk_new__c/fields/bt_belb_til_vrge__c.field-meta.xml
<CustomField>
    <fullName>bt_belb_til_vrge__c</fullName>
    <label>Økonomisk kompensation til værge 46c36</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>vrge_penge_nej</fullName>
                <label>Nej, værgen skal ikke betales</label>
            </value>
            <value>
                <fullName>vrge_penge_ja</fullName>
                <label>Ja, værgen skal have et beløb</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>