force-app/main/default/objects/df_journal_dk_new__c/fields/bt_vrge_belb__c.field-meta.xml
<CustomField>
    <fullName>bt_vrge_belb__c</fullName>
    <label>Beløb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>