force-app/main/default/objects/df_journal_dk_new__c/fields/doks_brnetestamente__c.field-meta.xml
<CustomField>
    <fullName>doks_brnetestamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Børnetestamente</label>
    <type>Checkbox</type>
</CustomField>