force-app/main/default/objects/df_journal_dk_new__c/fields/doks_forhndssamtykke__c.field-meta.xml
<CustomField>
    <fullName>doks_forhndssamtykke__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forhåndssamtykke</label>
    <type>Checkbox</type>
</CustomField>