force-app/main/default/objects/df_journal_dk_new__c/fields/doks_fremtidsfuldmagt__c.field-meta.xml
<CustomField>
    <fullName>doks_fremtidsfuldmagt__c</fullName>
    <label>Fremtidsfuldmagt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>doks_fremtidsfuldmagt_1</fullName>
                <label>Der oprettes én fremtidsfuldmagt</label>
            </value>
            <value>
                <fullName>doks_fremtidsfuldmagt_2</fullName>
                <label>Der oprettes to fremtidsfuldmagter</label>
            </value>
            <value>
                <fullName>doks_fremtidsfuldmagt_flere</fullName>
                <label>Der oprettes mere end to fremtidsfuldmagter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>