force-app/main/default/objects/df_journal_dk_new__c/fields/doks_generalfuldmagt__c.field-meta.xml
<CustomField>
    <fullName>doks_generalfuldmagt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generalfuldmagt</label>
    <type>Checkbox</type>
</CustomField>