force-app/main/default/objects/df_journal_dk_new__c/fields/doks_krver_spec_skrddersyning__c.field-meta.xml
<CustomField>
    <fullName>doks_krver_spec_skrddersyning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kræver et eller flere dokumenter 1b26a</label>
    <type>Checkbox</type>
</CustomField>