force-app/main/default/objects/df_journal_dk_new__c/fields/doks_min_sidste_vilje__c.field-meta.xml
<CustomField>
    <fullName>doks_min_sidste_vilje__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Min Sidste Vilje</label>
    <type>Checkbox</type>
</CustomField>