force-app/main/default/objects/df_journal_dk_new__c/fields/doks_samejeoverenskomst__c.field-meta.xml
<CustomField>
    <fullName>doks_samejeoverenskomst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Samejeoverenskomst</label>
    <type>Checkbox</type>
</CustomField>