force-app/main/default/objects/df_journal_dk_new__c/fields/doks_testamente__c.field-meta.xml
<CustomField>
    <fullName>doks_testamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testamente</label>
    <type>Checkbox</type>
</CustomField>