force-app/main/default/objects/df_journal_dk_new__c/fields/ff_fuldmgtige_p1__c.field-meta.xml
<CustomField>
    <fullName>ff_fuldmgtige_p1__c</fullName>
    <label>Fuldmægtige</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>ff_fuldmgtige_kun_en_p1</fullName>
                <label>Der skal kun være én fuldmægtig</label>
            </value>
            <value>
                <fullName>ff_fuldmgtige_en_prim_fl_foren_p1</fullName>
                <label>Én primær, flere subsidiære i forening</label>
            </value>
            <value>
                <fullName>ff_fuldmgtige_en_prim_fl_prio_p1</fullName>
                <label>Én primær, flere subsidiære i prioriteret rækkefølge</label>
            </value>
            <value>
                <fullName>ff_fuldmgtige_en_prim_en_sub_p1</fullName>
                <label>Én primær og én subsidiær fuldmægtig</label>
            </value>
            <value>
                <fullName>ff_fuldmgtige_alle_i_forening</fullName>
                <label>Flere fuldmægtige, alle i forening</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>