force-app/main/default/objects/df_journal_dk_new__c/fields/ff_fuldmgtige_p2__c.field-meta.xml
<CustomField>
    <fullName>ff_fuldmgtige_p2__c</fullName>
    <label>Fuldmægtige</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>ff_fuldm_p2_kun_en</fullName>
                <label>Der skal kun være én fuldmægtig</label>
            </value>
            <value>
                <fullName>ff_fuldm_p2_en_prim_fl_subs</fullName>
                <label>Én primær, flere subsidiære i forening</label>
            </value>
            <value>
                <fullName>ff_fuldm_p2_en_prim_fl_subs_prio</fullName>
                <label>Én primær, flere subsidiære i prioriteret rækkefølge</label>
            </value>
            <value>
                <fullName>ff_fuldm_p2_en_prim_en_subs</fullName>
                <label>Én primær og én subsidiær fuldmægtig</label>
            </value>
            <value>
                <fullName>ff_fuldm_p2_alle_forening</fullName>
                <label>Flere fuldmægtige, alle i forening</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>