force-app/main/default/objects/df_journal_dk_new__c/fields/ff_samme_vilkr_p2__c.field-meta.xml
<CustomField>
    <fullName>ff_samme_vilkr_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Præcist samme vilkår for Person  95c7b</label>
    <type>Checkbox</type>
</CustomField>