force-app/main/default/objects/df_journal_dk_new__c/fields/ford_arv_frstafdde__c.field-meta.xml
<CustomField>
    <fullName>ford_arv_frstafdde__c</fullName>
    <label>Fordeling af arv efter førstafdø c90f8</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>ford_arv_frstafdde_partner</fullName>
                <label>Mest muligt til partner</label>
            </value>
            <value>
                <fullName>procent_frstaafdde</fullName>
                <label>Procentfordeling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>