force-app/main/default/objects/df_journal_dk_new__c/fields/forhnds_hvem_afg_samt__c.field-meta.xml
<CustomField>
    <fullName>forhnds_hvem_afg_samt__c</fullName>
    <label>Hvem skal afgive forhåndssamtykk b7c64</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>forhnds_hvem_afg_samt_p1</fullName>
                <label>Børn af Person 1</label>
            </value>
            <value>
                <fullName>forhnds_hvem_afg_samt_p2</fullName>
                <label>Børn af Person 2</label>
            </value>
            <value>
                <fullName>forhnds_hvem_afg_samt_alle</fullName>
                <label>Alle særbørn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>