force-app/main/default/objects/df_journal_dk_new__c/fields/forhndssamtykke_boolean__c.field-meta.xml
<CustomField>
    <fullName>forhndssamtykke_boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forhåndssamtykke</label>
    <type>Checkbox</type>
</CustomField>