force-app/main/default/objects/df_journal_dk_new__c/fields/fremtidsfuldmagt__c.field-meta.xml
<CustomField>
    <fullName>fremtidsfuldmagt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fremtidsfuldmagt(er)</label>
    <type>Checkbox</type>
</CustomField>