force-app/main/default/objects/df_journal_dk_new__c/fields/fremtidsfuldmagt_boolean__c.field-meta.xml
<CustomField>
    <fullName>fremtidsfuldmagt_boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fremtidsfuldmagt</label>
    <type>Checkbox</type>
</CustomField>