force-app/main/default/objects/df_journal_dk_new__c/fields/generalfuldmagt_boolean__c.field-meta.xml
<CustomField>
    <fullName>generalfuldmagt_boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generalfuldmagt</label>
    <type>Checkbox</type>
</CustomField>