force-app/main/default/objects/df_journal_dk_new__c/fields/genfuldm_fuldmhaver_p1__c.field-meta.xml
<CustomField>
    <fullName>genfuldm_fuldmhaver_p1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fuldmagtshaver</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>genfuldm_fuldmhaver_p1</relationshipLabel>
    <relationshipName>genfuldm_fuldmhaver_p1</relationshipName>
    <type>Lookup</type>
</CustomField>