force-app/main/default/objects/df_journal_dk_new__c/fields/genfuldm_fuldmhaver_p1_postnr__c.field-meta.xml
<CustomField>
    <fullName>genfuldm_fuldmhaver_p1_postnr__c</fullName>
    <label>Postnummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>