force-app/main/default/objects/df_journal_dk_new__c/fields/genfuldm_fuldmhaver_p2_adresse__c.field-meta.xml
<CustomField>
    <fullName>genfuldm_fuldmhaver_p2_adresse__c</fullName>
    <label>Adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>