force-app/main/default/objects/df_journal_dk_new__c/fields/genfuldm_overdragelse_p2__c.field-meta.xml
<CustomField>
    <fullName>genfuldm_overdragelse_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuldmagtshaver kan overdrage ful 20b94</label>
    <type>Checkbox</type>
</CustomField>