force-app/main/default/objects/df_journal_dk_new__c/fields/genfuldm_simple__c.field-meta.xml
<CustomField>
    <fullName>genfuldm_simple__c</fullName>
    <label>Oprettelse af generalfuldmagter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>genfuldm_simple_p1_til_p2</fullName>
                <label>Person 1 opretter fuldmagt til Person 2</label>
            </value>
            <value>
                <fullName>genfuldm_simple_p2_til_p1</fullName>
                <label>Person 2 opretter fuldmagt til Person 1</label>
            </value>
            <value>
                <fullName>genfuldm_simple_gensidig</fullName>
                <label>Der oprettes fuldmagt til hinanden</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>