force-app/main/default/objects/df_journal_dk_new__c/fields/genst_legat_indst_genstlegat__c.field-meta.xml
<CustomField>
    <fullName>genst_legat_indst_genstlegat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indsæt genstandslegat(er)</label>
    <type>Checkbox</type>
</CustomField>