force-app/main/default/objects/df_journal_dk_new__c/fields/gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>gldsbrev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gældsbrev</label>
    <type>Checkbox</type>
</CustomField>