force-app/main/default/objects/df_journal_dk_new__c/fields/gravstedsvedligeholdelse__c.field-meta.xml
<CustomField>
    <fullName>gravstedsvedligeholdelse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gravstedsvedligeholdelse</label>
    <type>Checkbox</type>
</CustomField>