force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_boolean__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ægtepagt</label>
    <type>Checkbox</type>
</CustomField>