force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_boplsland_person_1__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_boplsland_person_1__c</fullName>
    <label>Bopælsland for Person 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>