force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_bosat_udenfor_dk__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_bosat_udenfor_dk__c</fullName>
    <label>Var en af jer bosat uden for Dan 0dd27</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gtepagt_bosat_udenfor_dk_ja</fullName>
                <label>Ja, indsæt paragraf om brug af dansk ret</label>
            </value>
            <value>
                <fullName>gtepagt_bosat_udenfor_dk_nej</fullName>
                <label>Nej, vi var begge bosat i Danmark</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>