force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_dato_tinglysning__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_dato_tinglysning__c</fullName>
    <label>Dato for tinglysning af den eksi a57dc</label>
    <type>DateTime</type>
</CustomField>