force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_dato_tinglysning_txt__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_dato_tinglysning_txt__c</fullName>
    <label>Dato for tinglysning af den eksi a57dc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>