force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_dato_underskrift__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_dato_underskrift__c</fullName>
    <label>Dato for underskrift af den eksi e56ee</label>
    <type>DateTime</type>
</CustomField>