force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_dato_underskrift_txt__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_dato_underskrift_txt__c</fullName>
    <label>Dato for underskrift af den eksi e56ee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>