force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_eksisterende__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_eksisterende__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eksisterer der allerede en ægtep c4deb</label>
    <type>Checkbox</type>
</CustomField>