force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_gld__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_gld__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal gæld være særeje?</label>
    <type>Checkbox</type>
</CustomField>