force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_gld_omfang__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_gld_omfang__c</fullName>
    <label>Type af gæld som ønskes gjort ti d22ea</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gtepagt_gld_omf_fr_gteskab</fullName>
                <label>Kun gæld fra før vi blev gift</label>
            </value>
            <value>
                <fullName>gtepagt_gld_omf_alt</fullName>
                <label>Alt gæld (Både fra før og efter ægteskabsindgåelsen)</label>
            </value>
            <value>
                <fullName>gtepagt_gld_omf_specifik</fullName>
                <label>Kun specifik gæld</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>