force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_indtgter_surrogater__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_indtgter_surrogater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal særejet omfatte indtægter o f9bca</label>
    <type>Checkbox</type>
</CustomField>