force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_pension_inds_p2__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_pension_inds_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indsæt pensions- og/eller forsik baca9</label>
    <type>Checkbox</type>
</CustomField>